c/include/json_structure/types.h

/* ============================================================================
 * JSON Structure Type Enumeration
 * ========================================================================== */

/**
 * @brief JSON Structure type identifiers
 *
 * These types correspond to the JSON Structure specification type names.
 * Use js_type_name() to get the string representation.
 */
typedef enum js_type {
    /* Invalid/unknown type */
    JS_TYPE_UNKNOWN = 0,

    /* Primitive types */
    JS_TYPE_ANY,
    JS_TYPE_NULL,
    JS_TYPE_BOOLEAN,
    JS_TYPE_INTEGER,
    JS_TYPE_NUMBER,
    JS_TYPE_STRING,
    JS_TYPE_BINARY,
    JS_TYPE_OBJECT,
    JS_TYPE_ARRAY,
    JS_TYPE_MAP,
    JS_TYPE_ABSTRACT,

    /* Extended numeric types */
    JS_TYPE_INT8,
    JS_TYPE_INT16,
    JS_TYPE_INT32,
    JS_TYPE_INT64,
    JS_TYPE_UINT8,
    JS_TYPE_UINT16,
    JS_TYPE_UINT32,
    JS_TYPE_UINT64,
    JS_TYPE_FLOAT16,
    JS_TYPE_FLOAT32,
    JS_TYPE_FLOAT64,
    JS_TYPE_FLOAT128,
    JS_TYPE_DECIMAL,
    JS_TYPE_DECIMAL64,
    JS_TYPE_DECIMAL128,

    /* Extended string types */
    JS_TYPE_DATETIME,
    JS_TYPE_DATE,
    JS_TYPE_TIME,
    JS_TYPE_DURATION,
    JS_TYPE_UUID,
    JS_TYPE_URI,
    JS_TYPE_URI_REFERENCE,
    JS_TYPE_URI_TEMPLATE,
    JS_TYPE_REGEX,
    JS_TYPE_CHAR,
    JS_TYPE_IPV4,
    JS_TYPE_IPV6,
    JS_TYPE_EMAIL,
    JS_TYPE_IDN_EMAIL,
    JS_TYPE_HOSTNAME,
    JS_TYPE_IDN_HOSTNAME,
    JS_TYPE_IRI,
    JS_TYPE_IRI_REFERENCE,
    JS_TYPE_JSON_POINTER,
    JS_TYPE_RELATIVE_JSON_POINTER,

    /* Internal use */
    JS_TYPE_COUNT
} js_type_t;
/* ============================================================================
 * Severity and Location Types
 * ========================================================================== */

/**
 * @brief Severity level for validation errors/warnings
 */
typedef enum js_severity {
    JS_SEVERITY_ERROR = 0,  /**< Validation error - schema/instance is invalid */
    JS_SEVERITY_WARNING,    /**< Warning - potential issue but not invalid */
    JS_SEVERITY_INFO        /**< Informational message */
} js_severity_t;
/**
 * @brief Combined error code type
 *
 * This is a union of generic, schema, and instance error codes.
 * See error_codes.h for the specific error code enumerations.
 */
typedef int js_error_code_t;
/* ============================================================================
 * Result Structure
 * ========================================================================== */

/**
 * @brief Validation result container
 *
 * Holds the overall validation result and any accumulated errors.
 * Use js_result_init() before use and js_result_cleanup() when done.
 */
typedef struct js_result {
    bool valid;                 /**< True if validation passed */
    js_error_t* errors;         /**< Array of errors (dynamically allocated) */
    size_t error_count;         /**< Number of errors in the array */
    size_t error_capacity;      /**< Allocated capacity for errors array */
} js_result_t;
/**
 * @brief Free memory using the configured allocator
 *
 * @param ptr Pointer to memory to free (may be NULL)
 */
void js_free(void* ptr);
/* ============================================================================
 * Result Functions
 * ========================================================================== */

/**
 * @brief Initialize a result structure
 *
 * Must be called before using a js_result_t. Sets valid to true
 * and initializes error array.
 *
 * @param result Result to initialize
 */
void js_result_init(js_result_t* result);
/**
 * @brief Clean up a result structure, freeing all errors
 *
 * @param result Result to clean up
 */
void js_result_cleanup(js_result_t* result);
/**
 * @brief Get a formatted string with all errors
 *
 * @param result Result to format
 * @return Newly allocated string with all errors, or NULL on failure.
 *         Caller must free with js_free().
 */
char* js_result_to_string(const js_result_t* result);