c/include/json_structure/schema_validator.h

/* ============================================================================
 * Schema Validator
 * ============================================================================ */

/**
 * @brief Schema validator instance
 */
typedef struct js_schema_validator {
    js_schema_options_t options;
} js_schema_validator_t;
/**
 * @brief Initialize a schema validator with default options
 * @param validator Validator to initialize
 */
void js_schema_validator_init(js_schema_validator_t* validator);
/**
 * @brief Validate a schema from a JSON string
 * @param validator Validator instance
 * @param json_str JSON string containing the schema
 * @param result Output validation result
 * @return true if schema is valid (no errors), false otherwise
 */
bool js_schema_validate_string(const js_schema_validator_t* validator,
                               const char* json_str,
                               js_result_t* result);